<resources>
    <string name="app_name">Link</string>
    <string name="meetup_reg">모임등록</string>
    <string name="location_reg">구성원 출발지점 등록</string>
    <string name="attendees">구성원보기</string>
    <string name="search_places">중간지점 찾기</string>
    <string name="result_places">장소추천</string>
    <string name="title_activity_loading">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="searchCenter">중간지점 찾기</string>
</resources>
